--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
-=<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="id">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            font-size: 18px;
+            line-height: 1.6;
+            margin: 20px;
+        }
+
+        h1 {
+            font-size: 28px;
+            color: #222;
+        }
+
+        h2 {
+            font-size: 22px;
+            color: #333;
+        }
+
+        .bio {
+            margin-bottom: 20px;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
   </head>
   <body style="background-color: white;">
-        <h5 style="font-family:Times new roman;"><img src="img/logo tkj yaspih rajeg.png" height=90px width=90px align="center">SELAMAT DATANG DI WEB ASEP</center></h5>
+        <h6 style="font-family:Times new roman;"><img src="img/logo tkj yaspih rajeg.png" height=90px width=90px align="center">SELAMAT DATANG DI WEB ASEP</center></h6>
       <hr>
       <h4 style="font-family:Times new roman;">Beranda</h5>
     <p style="font-family:Times new roman;">  Perkenalkan:</p>
