--- a/Upin-ipin.html
+++ b/Upin-ipin.html
@@ -1,8 +1,47 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
-  </head>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            font-size: 18px;
+            line-height: 1.6;
+            margin: 20px;
+        }
+
+        h1 {
+            font-size: 28px;
+            color: #222;
+        }
+
+        h2 {
+            font-size: 22px;
+            color: #333;
+        }
+
+        .bio {
+            margin-bottom: 20px;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
   <body>
     <h4 style="font-family:Times new roman;">2. Upin & Ipin</h4>
     <center><table border="1" cellspacing="0" cellpadding="5">
