--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
   </head>
   <body style="background-color: white;">
-        <h6 style="font-family:Times new roman;"><img src="img/logo tkj yaspih rajeg.png" height=90px width=90px align="center">SELAMAT DATANG DI WEB ASEP</center></h6>
+        <h6 style="font-family:Times new roman;"><img src="logo tkj yaspih rajeg.png" height=90px width=90px align="center">SELAMAT DATANG DI WEB ASEP</center></h6>
       <hr>
       <h4 style="font-family:Times new roman;">Beranda</h5>
     <p style="font-family:Times new roman;">  Perkenalkan:</p>
@@ -67,18 +67,18 @@
       </table>
       </td>
 <td width="30%" align="center">
-  <img src="img/Asep.png" alt="Foto asep" height="100" width="80">
+  <img src="Asep.png" alt="Foto asep" height="100" width="80">
   </td>
   </tr>
   </table>
     <br>
     <p align="justify" style="font-family:Times new roman;">Web ini dibuat sebagai bahan pembelajaran saya dalam meningkatkan suatu hal dalam bidang yg saya sukai, semoga dengan pembelajaran ini saya bisa mengenal lebih jauh dunia IT. Web ini berupa web dasar, berisi mengenai My favorit kartun, favorit game, and favorit song.</p>
     <table border="1" cellspacing="0" cellpadding="5">
-      <th><img src="img/Doraemon.jpg" height="40"
+      <th><img src="Doraemon.jpg" height="40"
         width="70"></th>
-        <th><img src="img/Upin-ipin.jpg" height="40" width="70"></th>
-        <th><img src="img/duolingo.png" height="40" width="70"></th>
-        <th><img src="img/about you.png" height="40" width="70"></th>
+        <th><img src="Upin-ipin.jpg" height="40" width="70"></th>
+        <th><img src="duolingo.png" height="40" width="70"></th>
+        <th><img src="about you.png" height="40" width="70"></th>
     </table>
     <br>
     <table width="100%" bgcolor="#f0f0f0">
