--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
   </head>
   <body style="background-color: white;">
-        <h6 style="font-family:Times new roman;"><img src="img/logo tkj yaspih rajeg.png" height=90px width=90px align="center">SELAMAT DATANG DI WEB ASEP</center></h6>
+        <h6 style="font-family:Times new roman;"><img src="logo tkj yaspih rajeg.png" height=90px width=90px align="center">SELAMAT DATANG DI WEB ASEP</center></h6>
       <hr>
       <h4 style="font-family:Times new roman;">Beranda</h5>
     <p style="font-family:Times new roman;">  Perkenalkan:</p>
