--- a/favorit kartun.html
+++ b/favorit kartun.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
-
+ <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,7 +47,7 @@
     <h4 style="font-family:Times new roman;"><center>(Section-I)</center></h4>
     <h4 style="font-family:Times new roman;">1. Doraemon</h4>
     <center><table border="1" cellspacing="0" cellpadding="5">
-    <th><img src="img/Doraemon.jpg" height="200px" width="300px"></th>
+    <th><img src="Doraemon.jpg" height="200px" width="300px"></th>
     </table></center>
    <p align="justify" style="font-family:Times new roman;">Doraemon adalah kartun Jepang yang ceritanya tentang robot kucing biru dari masa depan yang datang untuk membantu Nobita, seorang anak yang pemalas dan sering kena masalah. Doraemon punya kantong ajaib yang bisa ngeluarin alat-alat canggih kayak pintu ke mana saja, baling-baling bambu, dan mesin waktu. Bersama teman-teman Nobita seperti Shizuka, Giant, dan Suneo, mereka sering terlibat dalam kejadian lucu dan petualangan seru.</p> 
    <p align="justify" style="font-family:Times new roman;">Kartun Doraemon ini bukan cuma bikin ketawa, tapi juga memiliki beberapa pelajaran. Salah satunya soal kecerobohan Nobita yang sering pakai alat seenaknya tanpa mikir panjang, dan akhirnya malah bikin masalah lebih besar. Dari situ kita bisa belajar kalau semua hal ada risikonya, dan penting banget buat mikir dulu sebelum bertindak. Selain itu, kartun ini juga ngajarin tentang tanggung jawab, kerja sama, dan pentingnya usaha sendiri, bukan cuma mengandalkan bantuan orang lain.</p>
