--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
-
+      <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,18 +67,18 @@
       </table>
       </td>
 <td width="30%" align="center">
-  <img src="img/Asep.png" alt="Foto asep" height="100" width="80">
+  <img src="Asep.png" alt="Foto asep" height="100" width="80">
   </td>
   </tr>
   </table>
     <br>
     <p align="justify" style="font-family:Times new roman;">Web ini dibuat sebagai bahan pembelajaran saya dalam meningkatkan suatu hal dalam bidang yg saya sukai, semoga dengan pembelajaran ini saya bisa mengenal lebih jauh dunia IT. Web ini berupa web dasar, berisi mengenai My favorit kartun, favorit game, and favorit song.</p>
     <table border="1" cellspacing="0" cellpadding="5">
-      <th><img src="img/Doraemon.jpg" height="40"
+      <th><img src="Doraemon.jpg" height="40"
         width="70"></th>
-        <th><img src="img/Upin-ipin.jpg" height="40" width="70"></th>
-        <th><img src="img/duolingo.png" height="40" width="70"></th>
-        <th><img src="img/about you.png" height="40" width="70"></th>
+        <th><img src="Upin-ipin.jpg" height="40" width="70"></th>
+        <th><img src="duolingo.png" height="40" width="70"></th>
+        <th><img src="about you.png" height="40" width="70"></th>
     </table>
     <br>
     <table width="100%" bgcolor="#f0f0f0">
