--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
-
+     <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,7 +65,7 @@
     <td align="center">
       <h3 style="color: white; margin: 0; font-family:Times new roman;">Hubungi di:</h3>
       <br>
-        <center><img src="img/logo gmail.png" width="35px" height="35px"></center>
+        <center><img src="logo gmail.png" width="35px" height="35px"></center>
         <p><a href="mailto:aseppirdaus026@gmail.com;" style="color: gray;">aseppirdaus026@gmail.com</a></p>
     </td>
   </tr>
@@ -73,7 +73,7 @@
 <table width="100%" bgcolor="#001f3f" cellpadding="20" cellspacing="0">
   <tr>
     <td align="center">
-      <img src="img/logo wa.png" height="40px" weidth="40px">
+      <img src="logo wa.png" height="40px" weidth="40px">
         <p><a href="https://wa.me/6285782580079" target="_blank" style="color: gray;">085782580079</a></p>
     </td>
   </tr>
@@ -81,7 +81,7 @@
 <table width="100%" bgcolor="#001f3f" cellpadding="20" cellspacing="0">
   <tr>
     <td align="center">
-      <img src="img/telepon.png" height="40px" weidth="40px">
+      <img src="telepon.png" height="40px" weidth="40px">
         <p><a href="tel:083872217520" style="color: gray;">083872217520</a></p>
         <hr>
     </td>
