--- a/index.html
+++ b/index.html
@@ -5,42 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
       <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 18px;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        h1 {
-            font-size: 28px;
-            color: #222;
-        }
-
-        h2 {
-            font-size: 22px;
-            color: #333;
-        }
-
-        .bio {
-            margin-bottom: 20px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
   </head>
   <body style="background-color: white;">
         <h6 style="font-family:Times new roman;"><img src="logo tkj yaspih rajeg.png" height=90px width=90px align="center">SELAMAT DATANG DI WEB ASEP</center></h6>
@@ -49,7 +13,7 @@
     <p style="font-family:Times new roman;">  Perkenalkan:</p>
     <table border="0" width="100%">
       <tr>
-        <td width="70%" valign="top">
+        <td width="70%">
           <table border="0">
             <tr>
     <td style="font-family:Times new roman;"><b>Nama</td></b>
