--- a/index.html
+++ b/index.html
@@ -11,30 +11,12 @@
       <hr>
       <h4 style="font-family:Times new roman;">Beranda</h5>
     <p style="font-family:Times new roman;">  Perkenalkan:</p>
-    <table border="0" width="100%">
-      <tr>
-        <td width="100%">
-          <table border="0">
-            <tr>
-    <td style="font-family:Times new roman;"><b>Nama</td></b>
-    <td style="font-family:Times new roman;">: Asep Pirdaus</td>
-    </tr>
-    <tr>
- <td style="font-family:Times new roman;"><b>Asal Sekolah</td></b>
-    <td style="font-family:Times new roman;">: SMK Yaspih Rajeg</td>
-    </tr>
-    <tr>
- <td style="font-family:Times new roman;"><b>Jurusan</td></b>
-    <td style="font-family:Times new roman;">: Teknik Komputer dan Jaringan (TKJ)</td>
-    </tr>
-    <tr>
-      </table>
-      </td>
-<td width="100%" align="center">
-  <img src="Asep.png" alt="Foto asep" height="100" width="80">
-  </td>
-  </tr>
-  </table>
+    <p style="font-family:Times new roman;"><b>Nama:</p></b>
+    <p style="font-family:Times new roman;"> Asep Pirdaus</p>
+ <p style="font-family:Times new roman;"><b>Asal Sekolah:</p></b>
+    <p style="font-family:Times new roman;"> SMK Yaspih Rajeg</p>
+ <p style="font-family:Times new roman;"><b>Jurusan:</p></b>
+    <p style="font-family:Times new roman;"> Teknik Komputer dan Jaringan (TKJ)</p>
     <br>
     <p align="justify" style="font-family:Times new roman;">Web ini dibuat sebagai bahan pembelajaran saya dalam meningkatkan suatu hal dalam bidang yg saya sukai, semoga dengan pembelajaran ini saya bisa mengenal lebih jauh dunia IT. Web ini berupa web dasar, berisi mengenai My favorit kartun, favorit game, and favorit song.</p>
     <table border="1" cellspacing="0" cellpadding="5">
