--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     <center><p style="color: white; font-family:Times new roman;">Terima kasih</p></center>
     <center><p style="color: white; font-family:Times new roman;">Telah mengunjungi web ini</p></center>
      <center><h4 style="font-family:Times new roman; color: white;"> Halaman Riwayat:</h4></center>
-      <center><a href="beranda.html">• Beranda</a></center>
+      <center><a href="index.html">• Beranda</a></center>
       <center><p><a href="favorit kartun.html" style="font-family:Times new roman;">• Section-I</a></p></center>
        <center><p><a href="favorit game.html" style="font-family:Times new roman;">• Section-II</a></p></center>
       <center><p><a href="my favorit song.html" style="font-family:Times new roman;">• Section-III</a></p></center>
