--- a/favorit game.html
+++ b/favorit game.html
@@ -4,50 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 18px;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        h1 {
-            font-size: 28px;
-            color: #222;
-        }
-
-        h2 {
-            font-size: 22px;
-            color: #333;
-        }
-
-        .bio {
-            margin-bottom: 20px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+ <link rel="stylesheet" href="style.css">
 </head>
    <body>
      <Center><h4 style="font-family:Times new roman;">My Favorit Game</h4></center>
      <center><h4 style="font-family:Times new roman;">(Section-II)</h4></center>
      <p><h4 style="font-family:Times new roman;">• Dulingo</h4></p>
      <center><table border="1" cellspacing="0" cellpadding="5">
-       <td><img src="img/duolingo.png" height="150px" width="150px"></td>
+       <td><img src="duolingo.png" height="150px" width="150px"></td>
      </table></center>
      <p align="justify" style="font-family:Times new roman;">Duolingo adalah sebuah platform pembelajaran bahasa yang dikemas dalam bentuk game edukatif. Aplikasi ini memungkinkan pengguna untuk belajar berbagai bahasa asing secara interaktif dan menyenangkan. Game ini kurang lebih menawarkan pembelajaran 30 bahasa asing seperti Inggris, Spanyol, Jepang, Prancis, Jerman, Korea, dan lainnya, dengan game ini kita dapat mempelajari bahasa asing yang kita minati.</p>
      <p align="justify" style="font-family:Times new roman;">Duolingo menggunakan pendekatan gamifikasi, yaitu menyisipkan elemen-elemen permainan seperti poin pengalaman (XP), level, tantangan harian, nyawa, dan papan peringkat agar proses belajar terasa lebih menarik dan memotivasi pengguna untuk terus berlatih setiap hari. Setiap pelajaran disusun secara bertahap dan dirancang untuk membangun keterampilan kosakata, tata bahasa, dan pengucapan dengan cara yang mudah diakses.</p>
@@ -56,7 +20,7 @@
       <tr>
         <td>
      <h4 style="font-family:Times new roman;"> Halaman Riwayat</h4>
-      <li><a href="beranda.html">Beranda</a></li>
+      <li><a href="index.html">Beranda</a></li>
       <li><a href="favorit kartun.html" style="font-family:Times new roman;">Section-I</a></li>
       <li><a href="favorit game.html" style="font-family:Times new roman;">Section-II</a></li>
       <li><a href="my favorit song.html" style="font-family:Times new roman;">Section-III</a></li>
