--- a/Upin-ipin.html
+++ b/Upin-ipin.html
@@ -4,48 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 18px;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        h1 {
-            font-size: 28px;
-            color: #222;
-        }
-
-        h2 {
-            font-size: 22px;
-            color: #333;
-        }
-
-        .bio {
-            margin-bottom: 20px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
 </head>
   <body>
     <h4 style="font-family:Times new roman;">2. Upin & Ipin</h4>
     <center><table border="1" cellspacing="0" cellpadding="5">
-    <th><img src="img/Upin-ipin.jpg" height="100px"
+    <th><img src="Upin-ipin.jpg" height="100px"
     width="200px"></th>
     </table></center>
     <p align="justify" style="font-family:times new roman;">Upin & Ipin adalah kartun asal Malaysia yang menceritakan kehidupan sehari-hari dua anak kembar bernama Upin dan Ipin. Mereka tinggal bersama Kak Ros dan Opah di sebuah desa yang asri. Ceritanya sederhana tapi seru, tentang keseharian mereka di sekolah, bermain bersama teman-teman seperti Ehsan, Mail, Jarjit, Mei Mei, dan Fizi, serta kegiatan-kegiatan tradisional yang penuh nilai budaya.</p>
@@ -56,7 +20,7 @@
      <tr>
          <td>
      <h4><p style="font-family:Times new roman;">Halaman Riwayat</h4></p>
-      <li><a href="beranda.html">Beranda</a></li>
+      <li><a href="index.html">Beranda</a></li>
       <li><a href="favorit kartun.html" style="font-family:Times new roman;">Section-I</a></li>
        <li><a href="favorit game.html" style="font-family:Times new roman;">Section-II</a></li>
       <li><a href="my favorit song.html" style="font-family:Times new roman;">Section-III</a></li>
