--- a/favorit kartun.html
+++ b/favorit kartun.html
@@ -5,42 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Asep</title>
  <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 18px;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        h1 {
-            font-size: 28px;
-            color: #222;
-        }
-
-        h2 {
-            font-size: 22px;
-            color: #333;
-        }
-
-        .bio {
-            margin-bottom: 20px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
 </head>
   <body>
     <h4 style="font-family:Times new roman;"><center>My Favorit Kartun</center></h4>
@@ -57,7 +22,7 @@
       <tr>
         <td>
        <h4><p style="font-family:Times new roman;">Halaman Riwayat</h4></p>
-      <li><a href="beranda.html">Beranda</a></li>
+      <li><a href="index.html">Beranda</a></li>
       <li><a href="favorit kartun.html" style="font-family:Times new roman;">Section-I</a></li>
        <li><a href="favorit game.html" style="font-family:Times new roman;">Section-II</a></li>
        <li><a href="my favorit song.html" style="font-family:Times new roman;">Section-III</a></li>
