--- a/index.html
+++ b/index.html
@@ -11,12 +11,34 @@
       <hr>
       <h4 style="font-family:Times new roman;">Beranda</h5>
     <p style="font-family:Times new roman;">  Perkenalkan:</p>
-    <p style="font-family:Times new roman;"><b>Nama:</p></b>
-    <p style="font-family:Times new roman;"> Asep Pirdaus</p>
- <p style="font-family:Times new roman;"><b>Asal Sekolah:</p></b>
-    <p style="font-family:Times new roman;"> SMK Yaspih Rajeg</p>
- <p style="font-family:Times new roman;"><b>Jurusan:</p></b>
-    <p style="font-family:Times new roman;"> Teknik Komputer dan Jaringan (TKJ)</p>
+    <table border="0" width="100%">
+    <tr>
+      <!-- Biodata -->
+      <td width="70%" valign="top">
+        <font face="Times new roman">
+        <table border="0">
+          <tr>
+            <td><b>Nama</b></td>
+            <td>: Asep Pirdaus</td>
+          </tr>
+          <tr>
+            <td><b>Asal Sekolah</b></td>
+            <td>: SMK Yaspih Rajeg</td>
+          </tr>
+          <tr>
+            <td><b>Jurusan</b></td>
+            <td>: Teknik Komputer dan Jaringan (TKJ)</td>
+          </tr>
+        </table>
+        </font>
+      </td>
+
+      <!-- Foto -->
+      <td width="30%" align="center">
+        <img src="Asep.png" alt="Foto Asep" width="90" height="100"><br>
+      </td>
+    </tr>
+  </table>
     <br>
     <p align="justify" style="font-family:Times new roman;">Web ini dibuat sebagai bahan pembelajaran saya dalam meningkatkan suatu hal dalam bidang yg saya sukai, semoga dengan pembelajaran ini saya bisa mengenal lebih jauh dunia IT. Web ini berupa web dasar, berisi mengenai My favorit kartun, favorit game, and favorit song.</p>
     <table border="1" cellspacing="0" cellpadding="5">
@@ -31,7 +53,7 @@
       <tr>
         <td>
      <h4 style="font-family:Times new roman;"> Halaman Riwayat</h4>
-      <li><a href="beranda.html">Beranda</a></li>
+      <li><a href="index.html">Beranda</a></li>
       <li><a href="favorit kartun.html" style="font-family:Times new roman;">Section-I</a></li>
        <li><a href="favorit game.html" style="font-family:Times new roman;">Section-II</a></li>
       <li><a href="my favorit song.html" style="font-family:Times new roman;">Section-III</a></li>
