--- a/my favorit song.html
+++ b/my favorit song.html
@@ -17,7 +17,7 @@
   <h4 style="font-family:Times new roman;">• About you</h4>
   <audio src="lagu about you.mp3" controls></audio>
   <p align="justify" style="font-family:Times new roman;">Lagu "About You" dari The 1975 adalah lagu yang bernuansa sedih dan pelan. Musiknya terasa seperti mimpi, dengan suara gitar dan efek gema yang membuat suasananya tenang tapi juga terasa emosional. Lagu ini juga dinyanyikan bersama oleh istri dari salah satu personel band, yang suaranya muncul di bagian akhir lagu dan membuat suasananya makin terasa menyentuh.</p>
-  <p align="justify" style="font-family:Times new roman;">Lirik lagu ini bercerita tentang seseorang yang masih memikirkan mantan kekasihnya. Walaupun hubungan mereka sudah berakhir, ingatan tentang orang itu masih sering muncul dan sulit dilupakan. Lagu ini menggambarkan perasaan rindu dan kehilangan, yang mungkin pernah dirasakan banyak orang setelah perpisahan.</p>
+  <p align="justify" style="font-family:Times new roman;">Lirik lagu ini menggambarkan seseorang yang pernah ia cintai. Perasaan dalam lagu ini terdengar lembut, dalam, dan menyentuh, seperti saat seseorang sedang diam dan memikirkan sesuatu yang penting. Lagu ini menggambarkan perasaan rindu dan kehilangan, yang mungkin pernah dirasakan banyak orang setelah perpisahan.</p>
    <table width="100%" bgcolor="#f0f0f0">
       <tr>
         <td>
